# Fun_with_Flora

./: README.md
Fun-with-Flora/: main.py  pyproject.toml  replit_zip_error_log.txt
Fun-with-Flora/.cache/replit/nix/: env.json
Fun-with-Flora/.upm/: store.json
Fun-with-Flora/templates/: Project_Camerapage.html  Project_Results.html  index.html
