[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
replit = "^3.2.4"
Flask = "^2.1.3"
lxml = "^4.9.1"
HTMLParser = "^0.0.2"
docutils = "^0.19"
python-ntlm = "^1.1.0"
tornado = "^6.2"
Cython = "^0.29.32"
keyring = "^23.8.2"
railroad = "^0.5.0"
attr = "^0.3.2"
lockfile = "^0.12.2"
ipywidgets = "^8.0.1"
numpy = "^1.23.2"
toml = "^0.10.2"
cryptography = "^37.0.4"
ipython = "^8.4.0"
Sphinx = "^5.1.1"

[tool.poetry.dev-dependencies]
python-lsp-server = "^1.5.0"
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"